section: slider with left image, viewport having horizontal scroll so fixed with flex 1

--- a/assets/section-feature-slider-with-left-image.css
+++ b/assets/section-feature-slider-with-left-image.css
@@ -7,6 +7,7 @@
   width: 100%;
   background-color: #fffaf5;
   min-height: 100vh;
+  max-width: 100vw;
 }
 
 /* Base Layout - Desktop 1440px */
@@ -26,7 +27,7 @@
    ======================================== */
 
 .custom-section-feature-slider-with-left-image__sidebar {
-  flex: 0 0 50vw;
+  flex: 1;
   width: 50vw;
   display: block;
   height: 100vh;
@@ -73,7 +74,7 @@
    ======================================== */
 
 .custom-section-feature-slider-with-left-image__content {
-  flex: 0 0 50vw;
+  flex: 1;
   width: 50vw;
   min-width: 0;
   padding: 80px 40px;
